prototype_3/src/parser/CMODParser.py
# Generated from src/parser/CMOD.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CMODParser ( Parser ):

    grammarFileName = "CMOD.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'char'", 
                     "'const'", "'continue'", "'default'", "'do'", "'double'", 
                     "'else'", "'enum'", "'extern'", "'float'", "'for'", 
                     "'goto'", "'if'", "'inline'", "'int'", "'long'", "'register'", 
                     "'restrict'", "'return'", "'short'", "'signed'", "'sizeof'", 
                     "'static'", "'struct'", "'switch'", "'typedef'", "'union'", 
                     "'unsigned'", "'void'", "'volatile'", "'while'", "'_Bool'", 
                     "'_Complex'", "'_Imaginary'", "'module'", "'import'", 
                     "'export'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "'.'", "'->'", "'++'", "'--'", "'&'", "'*'", "'+'", 
                     "'-'", "'~'", "'!'", "'/'", "'%'", "'<<'", "'>>'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'^'", 
                     "'|'", "'&&'", "'||'", "'?'", "':'", "';'", "'...'", 
                     "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
                     "'>>='", "'&='", "'^='", "'|='", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Identifier", 
                      "IntegerConstant", "FloatingConstant", "CharacterConstant", 
                      "StringLiteral", "Whitespace", "Newline", "BlockComment", 
                      "LineComment" ]

    RULE_token = 0
    RULE_keyword = 1
    RULE_constant = 2
    RULE_enumerationConstant = 3
    RULE_punctuator = 4
    RULE_skipTokens = 5
    RULE_constantExpression = 6
    RULE_assignmentExpression = 7
    RULE_expression = 8
    RULE_innerExpression = 9
    RULE_declaration = 10
    RULE_declarationSpecifiers = 11
    RULE_initDeclaratorList = 12
    RULE_initDeclarator = 13
    RULE_storageClassSpecifier = 14
    RULE_typeSpecifier = 15
    RULE_structOrUnionSpecifier = 16
    RULE_structOrUnion = 17
    RULE_structDeclaration = 18
    RULE_specifierQualifierList = 19
    RULE_structDeclaratorList = 20
    RULE_structDeclarator = 21
    RULE_enumSpecifier = 22
    RULE_enumeratorList = 23
    RULE_enumerator = 24
    RULE_typeQualifier = 25
    RULE_functionSpecifier = 26
    RULE_declarator = 27
    RULE_directDeclarator = 28
    RULE_pointer = 29
    RULE_typeQualifierList = 30
    RULE_parameterTypeList = 31
    RULE_parameterDeclaration = 32
    RULE_abstractDeclarator = 33
    RULE_directAbstractDeclarator = 34
    RULE_directAbstractDeclaratorAfter = 35
    RULE_typedefName = 36
    RULE_initializer = 37
    RULE_initializerList = 38
    RULE_designation = 39
    RULE_designator = 40
    RULE_compoundStatement = 41
    RULE_compilationUnit = 42
    RULE_translationUnit = 43
    RULE_moduleDeclaration = 44
    RULE_importDeclaration = 45
    RULE_externalDeclaration = 46
    RULE_functionDefinition = 47

    ruleNames =  [ "token", "keyword", "constant", "enumerationConstant", 
                   "punctuator", "skipTokens", "constantExpression", "assignmentExpression", 
                   "expression", "innerExpression", "declaration", "declarationSpecifiers", 
                   "initDeclaratorList", "initDeclarator", "storageClassSpecifier", 
                   "typeSpecifier", "structOrUnionSpecifier", "structOrUnion", 
                   "structDeclaration", "specifierQualifierList", "structDeclaratorList", 
                   "structDeclarator", "enumSpecifier", "enumeratorList", 
                   "enumerator", "typeQualifier", "functionSpecifier", "declarator", 
                   "directDeclarator", "pointer", "typeQualifierList", "parameterTypeList", 
                   "parameterDeclaration", "abstractDeclarator", "directAbstractDeclarator", 
                   "directAbstractDeclaratorAfter", "typedefName", "initializer", 
                   "initializerList", "designation", "designator", "compoundStatement", 
                   "compilationUnit", "translationUnit", "moduleDeclaration", 
                   "importDeclaration", "externalDeclaration", "functionDefinition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    Identifier=87
    IntegerConstant=88
    FloatingConstant=89
    CharacterConstant=90
    StringLiteral=91
    Whitespace=92
    Newline=93
    BlockComment=94
    LineComment=95

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TokenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyword(self):
            return self.getTypedRuleContext(CMODParser.KeywordContext,0)


        def Identifier(self):
            return self.getToken(CMODParser.Identifier, 0)

        def constant(self):
            return self.getTypedRuleContext(CMODParser.ConstantContext,0)


        def StringLiteral(self):
            return self.getToken(CMODParser.StringLiteral, 0)

        def punctuator(self):
            return self.getTypedRuleContext(CMODParser.PunctuatorContext,0)


        def getRuleIndex(self):
            return CMODParser.RULE_token

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToken" ):
                listener.enterToken(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToken" ):
                listener.exitToken(self)




    def token(self):

        localctx = CMODParser.TokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_token)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.keyword()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(CMODParser.Identifier)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.constant()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.match(CMODParser.StringLiteral)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.punctuator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CMODParser.RULE_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyword" ):
                listener.enterKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyword" ):
                listener.exitKeyword(self)




    def keyword(self):

        localctx = CMODParser.KeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_keyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2199023255550) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntegerConstant(self):
            return self.getToken(CMODParser.IntegerConstant, 0)

        def FloatingConstant(self):
            return self.getToken(CMODParser.FloatingConstant, 0)

        def enumerationConstant(self):
            return self.getTypedRuleContext(CMODParser.EnumerationConstantContext,0)


        def CharacterConstant(self):
            return self.getToken(CMODParser.CharacterConstant, 0)

        def getRuleIndex(self):
            return CMODParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)




    def constant(self):

        localctx = CMODParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constant)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [88]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(CMODParser.IntegerConstant)
                pass
            elif token in [89]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(CMODParser.FloatingConstant)
                pass
            elif token in [87]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.enumerationConstant()
                pass
            elif token in [90]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(CMODParser.CharacterConstant)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumerationConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CMODParser.Identifier, 0)

        def getRuleIndex(self):
            return CMODParser.RULE_enumerationConstant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerationConstant" ):
                listener.enterEnumerationConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerationConstant" ):
                listener.exitEnumerationConstant(self)




    def enumerationConstant(self):

        localctx = CMODParser.EnumerationConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_enumerationConstant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(CMODParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PunctuatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CMODParser.RULE_punctuator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPunctuator" ):
                listener.enterPunctuator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPunctuator" ):
                listener.exitPunctuator(self)




    def punctuator(self):

        localctx = CMODParser.PunctuatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_punctuator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not(((((_la - 41)) & ~0x3f) == 0 and ((1 << (_la - 41)) & 70368744177663) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SkipTokensContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CMODParser.RULE_skipTokens

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkipTokens" ):
                listener.enterSkipTokens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkipTokens" ):
                listener.exitSkipTokens(self)




    def skipTokens(self):

        localctx = CMODParser.SkipTokensContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_skipTokens)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if _la <= 0 or ((((_la - 41)) & ~0x3f) == 0 and ((1 << (_la - 41)) & 35188667056191) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def skipTokens(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMODParser.SkipTokensContext)
            else:
                return self.getTypedRuleContext(CMODParser.SkipTokensContext,i)


        def innerExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMODParser.InnerExpressionContext)
            else:
                return self.getTypedRuleContext(CMODParser.InnerExpressionContext,i)


        def getRuleIndex(self):
            return CMODParser.RULE_constantExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantExpression" ):
                listener.enterConstantExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantExpression" ):
                listener.exitConstantExpression(self)




    def constantExpression(self):

        localctx = CMODParser.ConstantExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constantExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 133
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95]:
                        self.state = 117
                        self.skipTokens()
                        pass
                    elif token in [43]:
                        self.state = 118
                        self.match(CMODParser.T__42)
                        self.state = 120
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & -92358976733186) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 4294967295) != 0):
                            self.state = 119
                            self.innerExpression()


                        self.state = 122
                        self.match(CMODParser.T__43)
                        pass
                    elif token in [41]:
                        self.state = 123
                        self.match(CMODParser.T__40)
                        self.state = 125
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & -92358976733186) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 4294967295) != 0):
                            self.state = 124
                            self.innerExpression()


                        self.state = 127
                        self.match(CMODParser.T__41)
                        pass
                    elif token in [45]:
                        self.state = 128
                        self.match(CMODParser.T__44)
                        self.state = 130
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & -92358976733186) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 4294967295) != 0):
                            self.state = 129
                            self.innerExpression()


                        self.state = 132
                        self.match(CMODParser.T__45)
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 135 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constantExpression(self):
            return self.getTypedRuleContext(CMODParser.ConstantExpressionContext,0)


        def getRuleIndex(self):
            return CMODParser.RULE_assignmentExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentExpression" ):
                listener.enterAssignmentExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentExpression" ):
                listener.exitAssignmentExpression(self)




    def assignmentExpression(self):

        localctx = CMODParser.AssignmentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignmentExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.constantExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constantExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMODParser.ConstantExpressionContext)
            else:
                return self.getTypedRuleContext(CMODParser.ConstantExpressionContext,i)


        def getRuleIndex(self):
            return CMODParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):
